--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+button{
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
 .grid-container {
     display: grid;
     width: 500px;
