--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+body{
+    font-family: 'Macondo Swash Caps', cursive;
+    color: #929292;
+    background-color: #000000;
+    text-align: center;
+    font-size: 25px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 button{
   padding: 15px 25px;
   font-size: 24px;
