--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
     font-family: 'Macondo Swash Caps', cursive;
     color: #929292;
-    background-color: #000000;
     text-align: center;
     font-size: 25px;
     display:flex;
@@ -10,11 +9,12 @@ body{
     align-items: center;
 }
 button{
-  padding: 15px 25px;
-  font-size: 24px;
-  text-align: center;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
+    padding: 1px;
+    height: 20px;
+}
+img{
+    width:100px;
+    height:10px;
 }
 .grid-container {
     display: grid;
@@ -24,7 +24,11 @@ button{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .grid-item{
-    background-color: rgba(119, 0, 0, 0.8);
+    background-color: rgb(255, 255, 255);
+}
+.UI-container{
+    display: flex;
+    background-color: rgb(189, 224, 255);
 }
 .green{
     background-color: rgb(0, 255, 170);
