add buttons, precise and hover

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .grid-item{
-    background-color: #dacccc;
+    background-color: #ffffff;
 }
 .UI-container{
     display: flex;
