--- a/style.css
+++ b/style.css
@@ -1,35 +1,128 @@
-body{
-    font-family: 'Macondo Swash Caps', cursive;
-    color: #000000;
-    text-align: center;
-    font-size: 25px;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+body {
+  font-family: "Macondo Swash Caps", cursive;
+  color: #000000;
+  text-align: center;
+  font-size: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(221, 216, 216, 0.829);
 }
-button{
-    padding: 1px;
-    height: 20px;
+button {
+  padding: 1px;
+  height: 20px;
 }
-img{
-    width:100px;
-    height:10px;
+img {
+  width: 100px;
+  height: 10px;
+}
+.main-container {
+  display: flex;
+  flex-direction: center;
+  align-items: center;
+  gap: 50px;
 }
 .grid-container {
-    display: grid;
-    width: 500px;
-    height: 500px;
-    background-color: var(--secondary-light);
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  display: grid;
+  width: 500px;
+  height: 500px;
+  background-color: var(--secondary-light);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-.grid-item{
-    background-color: #ffffff;
+.grid-item {
+  background-color: #ffffff;
 }
-.UI-container{
-    display: flex;
-    background-color: rgb(189, 224, 255);
+.UI-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
-.green{
-    background-color: rgb(0, 255, 170);
+.green {
+  background-color: rgb(0, 255, 170);
+}
+#sizeSlider {
+  -webkit-appearance: none;
+  margin-right: 15px;
+  width: 100%;
+  height: 7px;
+  background: rgba(255, 255, 255, 0.6);
+  border-radius: 5px;
+  background-image: linear-gradient(hsl(16, 100%, 50%), #ff4500);
+  background-size: 100% 100%;
+}
+#sizeSlider[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #ff4500;
+  cursor: ew-resize;
+  box-shadow: 0 0 2px 0 #555;
+  transition: background 0.3s ease-in-out;
+}
+#sizeSlider[type="range"]::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  box-shadow: none;
+  border: none;
+  background: transparent;
+}
+#pen-color {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100px;
+  height: 100px;
+  border: none;
+  cursor: pointer;
+  background-color: inherit;
+}
+#pen-color::-webkit-color-swatch {
+  border-radius: 15px;
+  border: none;
+}
+#pen-color::-moz-color-swatch {
+  border-radius: 15px;
+  border: none;
+}
+button {
+  border: 2px solid rgb(155, 153, 153);
+  border-radius: 15px;
+  margin: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  padding: 20px;
+  cursor: pointer;
+  font-family: inherit;
+  background-color: inherit;
+}
+button:active {
+  background-color: rgb(139, 139, 139);
+}
+button:hover {
+  transform: scale(1.1);
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+  padding: 10px;
+  color: black;
+  font-size: 20px;
+}
+.fa-github {
+  color: var(--font);
+  font-size: 24px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.fa-github:hover {
+  transform: rotate(360deg) scale(1.2);
 }
