--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ img {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  background-color: rgb(213, 243, 240);
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 15px;
+  padding: 20px;
 }
 .green {
   background-color: rgb(0, 255, 170);
@@ -96,7 +100,7 @@ button {
   padding: 20px;
   cursor: pointer;
   font-family: inherit;
-  background-color: inherit;
+  background-color: rgb(248, 247, 243);
 }
 button:active {
   background-color: rgb(139, 139, 139);
